--- a/SwiftColorSampler.xcodeproj/xcshareddata/xcschemes/SwiftColorSampler iOS.xcscheme
+++ b/SwiftColorSampler.xcodeproj/xcshareddata/xcschemes/SwiftColorSampler iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0900"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "028959721CF7A07B00414BCB"
-               BuildableName = "SwiftColorSampler iOS.framework"
+               BuildableName = "SwiftColorSampler.framework"
                BlueprintName = "SwiftColorSampler iOS"
                ReferencedContainer = "container:SwiftColorSampler.xcodeproj">
             </BuildableReference>
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -43,7 +44,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "028959721CF7A07B00414BCB"
-            BuildableName = "SwiftColorSampler iOS.framework"
+            BuildableName = "SwiftColorSampler.framework"
             BlueprintName = "SwiftColorSampler iOS"
             ReferencedContainer = "container:SwiftColorSampler.xcodeproj">
          </BuildableReference>
@@ -55,6 +56,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -65,7 +67,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "028959721CF7A07B00414BCB"
-            BuildableName = "SwiftColorSampler iOS.framework"
+            BuildableName = "SwiftColorSampler.framework"
             BlueprintName = "SwiftColorSampler iOS"
             ReferencedContainer = "container:SwiftColorSampler.xcodeproj">
          </BuildableReference>
@@ -83,7 +85,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "028959721CF7A07B00414BCB"
-            BuildableName = "SwiftColorSampler iOS.framework"
+            BuildableName = "SwiftColorSampler.framework"
             BlueprintName = "SwiftColorSampler iOS"
             ReferencedContainer = "container:SwiftColorSampler.xcodeproj">
          </BuildableReference>
